:zap: Updated all dependencies to latest versions  - Also moved to sha512

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
 	<!-- Site Properties -->
 	<title>Nmap Web UI</title>
-	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/fomantic-ui/2.8.5/semantic.css" integrity="sha256-QK9LGk9bbD6gBBnQrHKOQ8IKYwDV6CwMRswzE6vB+LM=" crossorigin="anonymous" />
-	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.1.0/styles/default.min.css" integrity="sha256-48w2xk74a+0hWSZT2qyC/X5MNkwyyDRDNqoT99v1LJA=" crossorigin="anonymous" />
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/fomantic-ui/2.8.7/semantic.min.css" integrity="sha512-g/MzOGVPy3OQ4ej1U+qe4D/xhLwUn5l5xL0Fa7gdC258ZWVJQGwsbIR47SWMpRxSPjD0tfu/xkilTy+Lhrl3xg==" crossorigin="anonymous" />
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.2.0/styles/default.min.css" integrity="sha512-kZqGbhf9JTB4bVJ0G8HCkqmaPcRgo88F0dneK30yku5Y/dep7CZfCnNml2Je/sY4lBoqoksXz4PtVXS4GHSUzQ==" crossorigin="anonymous" />
 
 	<!-- Custom CSS -->
 	<link rel="stylesheet" type="text/css" href="ui.css">
@@ -313,12 +313,13 @@
 	</div>
 
 	<!-- Fomantic-UI -->
-	<script type="text/javascript" id="jquery-js" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-	<script type="text/javascript" id="fomantic-ui-js" src="https://cdnjs.cloudflare.com/ajax/libs/fomantic-ui/2.8.5/semantic.js" integrity="sha256-SeNU96at0t5XRuSk9/cLHWCGC0Ju5pug2NRGXeJCQN4=" crossorigin="anonymous"></script>
+	<script type="text/javascript" id="jquery-js" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
+	<script type="text/javascript" id="fomantic-ui-js" src="https://cdnjs.cloudflare.com/ajax/libs/fomantic-ui/2.8.7/semantic.min.js" integrity="sha512-1Nyd5H4Aad+OyvVfUOkO/jWPCrEvYIsQENdnVXt1+Jjc4NoJw28nyRdrpOCyFH4uvR3JmH/5WmfX1MJk2ZlhgQ==" crossorigin="anonymous"></script>
 	<!-- Including Dependencies -->
-	<script type="text/javascript" id="page-js" src="https://cdnjs.cloudflare.com/ajax/libs/page.js/1.11.6/page.js" integrity="sha256-dV8FQmw7bgCIfHmKiCenMuQSZDPICuprfxiG+17ev9M=" crossorigin="anonymous"></script>
-	<script type="text/javascript" id="xml2js-js" src="https://cdnjs.cloudflare.com/ajax/libs/x2js/1.2.0/xml2json.js" integrity="sha256-NZS4qGW4wX9A94Vc69yuyinWeSJNZ1+ui+R23e0VIjY=" crossorigin="anonymous"></script>
-	<script type="text/javascript" id="echarts-js" src="https://cdnjs.cloudflare.com/ajax/libs/echarts/4.8.0/echarts.min.js" integrity="sha256-t+F4PdKtyFlen1/7gUYPJcMo/g/vjhBD+KzMhHYzFGs=" crossorigin="anonymous"></script>
+	<script type="text/javascript" id="page-js" src="https://cdnjs.cloudflare.com/ajax/libs/page.js/1.11.6/page.js" integrity="sha512-MkYIEFfyoRmnQFt8ZoTflIGLT8RR+PfZSHtsG5Knc5uFayAspGft8XTaMIOozqD4KkGzE6xa7jU+tfWtcXMqtg==" crossorigin="anonymous"></script>
+	<script type="text/javascript" id="xml2js-js" src="https://cdnjs.cloudflare.com/ajax/libs/x2js/1.2.0/xml2json.min.js" integrity="sha512-HX+/SvM7094YZEKOCtG9EyjRYvK8dKlFhdYAnVCGNxMkA59BZNSZTZrqdDlLXp0O6/NjDb1uKnmutUeuzHb3iQ==" crossorigin="anonymous"></script>
+	<script type="text/javascript" id="highlight-js" src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.2.0/highlight.min.js" integrity="sha512-TDKKr+IvoqZnPzc3l35hdjpHD0m+b2EC2SrLEgKDRWpxf2rFCxemkgvJ5kfU48ip+Y+m2XVKyOCD85ybtlZDmw==" crossorigin="anonymous"></script>
+	<script type="text/javascript" id="echarts-js" src="https://cdnjs.cloudflare.com/ajax/libs/echarts/4.8.0/echarts.min.js" integrity="sha512-OvWfXEXFlgwaMYESoKZRrPGq9Ndjcf7pMgp+NjbUNeqEA1OOOUbLgquJGOzvh7H78qinNObGwRiFIj22es61Eg==" crossorigin="anonymous"></script>
 	<script type="text/javascript" id="echarts-template-chalk-js" src="echarts/echarts.chalk.js"></script>
 	<script type="text/javascript" id="echarts-template-purple-passion-js" src="echarts/echarts.purple-passion.js"></script>
 	<script type="text/javascript" id="echarts-template-macarons-js" src="echarts/echarts.macarons.js"></script>
@@ -326,14 +327,13 @@
 	<script type="text/javascript" id="echarts-template-walden-js" src="echarts/echarts.walden.js"></script>
 	<script type="text/javascript" id="echarts-template-westeros-js" src="echarts/echarts.westeros.js"></script>
 	<script type="text/javascript" id="echarts-template-wonderland-js" src="echarts/echarts.wonderland.js"></script>
-	<script type="text/javascript" id="highlight-js" src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.1.0/highlight.min.js" integrity="sha256-4ZkuDiOT/NBQfKzv3M+XVa0LQeEltc9PCtcaHUK3OfE=" crossorigin="anonymous"></script>
 	<!-- Including Dark Theme -->
 	<script type="text/javascript" id="dark-ui-js" src="dark-fomantic-ui.js"></script>
 	<!-- Including UI code -->
 	<script type="text/javascript" id="ui-js" src="ui.js"></script>
 	<script type="text/javascript" id="ui-js" src="ui.hooks.js"></script>
 	<!-- Including Parser code -->
-	<script type="text/javascript" id="parser-js" src="xml2json.js"></script>
+	<script type="text/javascript" id="parser-js" src="parser.js"></script>
 	<!-- Including App code -->
 	<script type="text/javascript" id="app-js" src="app.js"></script>
 </body>
