:truck: Renamed ui.hooks.js to ui.wrappers.js

--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/fomantic-ui/2.8.7/semantic.min.css" integrity="sha512-g/MzOGVPy3OQ4ej1U+qe4D/xhLwUn5l5xL0Fa7gdC258ZWVJQGwsbIR47SWMpRxSPjD0tfu/xkilTy+Lhrl3xg==" crossorigin="anonymous" />
 
 	<!-- Custom CSS -->
-	<link rel="stylesheet" type="text/css" href="static.css">
+	<link rel="stylesheet" type="text/css" href="ui.css">
 
 	<!-- Custom Style -->
 	<style type="text/css"></style>
@@ -196,9 +196,9 @@
 	<script type="text/javascript" id="dark-ui-js" src="dark-fomantic-ui.js"></script>
 	<!-- Including UI code -->
 	<script type="text/javascript" id="ui-js" src="ui.js"></script>
-	<script type="text/javascript" id="ui-js" src="ui.hooks.js"></script>
+	<script type="text/javascript" id="ui-wrappers-js" src="ui.wrappers.js"></script>
 	<!-- Including Parser code -->
-	<script type="text/javascript" id="parser-js" src="xml2json-wrapper.js"></script>
+	<script type="text/javascript" id="parser-js" src="parser.js"></script>
 	<!-- Including App code -->
 	<script type="text/javascript" id="app-js" src="app.js"></script>
 </body>
