--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 	<script type="text/javascript" id="dark-ui-js" src="dark-fomantic-ui.js"></script>
 	<!-- Including UI code -->
 	<script type="text/javascript" id="ui-js" src="ui.js"></script>
-	<script type="text/javascript" id="ui-js" src="ui.hooks.js"></script>
+	<script type="text/javascript" id="ui-wrappers-js" src="ui.wrappers.js"></script>
 	<!-- Including Parser code -->
 	<script type="text/javascript" id="parser-js" src="parser.js"></script>
 	<!-- Including App code -->
