:bulb: Disabled useless resources

--- a/index.html
+++ b/index.html
@@ -316,17 +316,17 @@
 	<script type="text/javascript" id="jquery-js" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
 	<script type="text/javascript" id="fomantic-ui-js" src="https://cdnjs.cloudflare.com/ajax/libs/fomantic-ui/2.8.7/semantic.min.js" integrity="sha512-1Nyd5H4Aad+OyvVfUOkO/jWPCrEvYIsQENdnVXt1+Jjc4NoJw28nyRdrpOCyFH4uvR3JmH/5WmfX1MJk2ZlhgQ==" crossorigin="anonymous"></script>
 	<!-- Including Dependencies -->
-	<script type="text/javascript" id="page-js" src="https://cdnjs.cloudflare.com/ajax/libs/page.js/1.11.6/page.js" integrity="sha512-MkYIEFfyoRmnQFt8ZoTflIGLT8RR+PfZSHtsG5Knc5uFayAspGft8XTaMIOozqD4KkGzE6xa7jU+tfWtcXMqtg==" crossorigin="anonymous"></script>
+	<!-- <script type="text/javascript" id="page-js" src="https://cdnjs.cloudflare.com/ajax/libs/page.js/1.11.6/page.js" integrity="sha512-MkYIEFfyoRmnQFt8ZoTflIGLT8RR+PfZSHtsG5Knc5uFayAspGft8XTaMIOozqD4KkGzE6xa7jU+tfWtcXMqtg==" crossorigin="anonymous"></script> -->
 	<script type="text/javascript" id="xml2js-js" src="https://cdnjs.cloudflare.com/ajax/libs/x2js/1.2.0/xml2json.min.js" integrity="sha512-HX+/SvM7094YZEKOCtG9EyjRYvK8dKlFhdYAnVCGNxMkA59BZNSZTZrqdDlLXp0O6/NjDb1uKnmutUeuzHb3iQ==" crossorigin="anonymous"></script>
 	<script type="text/javascript" id="highlight-js" src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.2.0/highlight.min.js" integrity="sha512-TDKKr+IvoqZnPzc3l35hdjpHD0m+b2EC2SrLEgKDRWpxf2rFCxemkgvJ5kfU48ip+Y+m2XVKyOCD85ybtlZDmw==" crossorigin="anonymous"></script>
-	<script type="text/javascript" id="echarts-js" src="https://cdnjs.cloudflare.com/ajax/libs/echarts/4.8.0/echarts.min.js" integrity="sha512-OvWfXEXFlgwaMYESoKZRrPGq9Ndjcf7pMgp+NjbUNeqEA1OOOUbLgquJGOzvh7H78qinNObGwRiFIj22es61Eg==" crossorigin="anonymous"></script>
+	<!-- <script type="text/javascript" id="echarts-js" src="https://cdnjs.cloudflare.com/ajax/libs/echarts/4.8.0/echarts.min.js" integrity="sha512-OvWfXEXFlgwaMYESoKZRrPGq9Ndjcf7pMgp+NjbUNeqEA1OOOUbLgquJGOzvh7H78qinNObGwRiFIj22es61Eg==" crossorigin="anonymous"></script>
 	<script type="text/javascript" id="echarts-template-chalk-js" src="echarts/echarts.chalk.js"></script>
 	<script type="text/javascript" id="echarts-template-purple-passion-js" src="echarts/echarts.purple-passion.js"></script>
 	<script type="text/javascript" id="echarts-template-macarons-js" src="echarts/echarts.macarons.js"></script>
 	<script type="text/javascript" id="echarts-template-vintage-js" src="echarts/echarts.vintage.js"></script>
 	<script type="text/javascript" id="echarts-template-walden-js" src="echarts/echarts.walden.js"></script>
 	<script type="text/javascript" id="echarts-template-westeros-js" src="echarts/echarts.westeros.js"></script>
-	<script type="text/javascript" id="echarts-template-wonderland-js" src="echarts/echarts.wonderland.js"></script>
+	<script type="text/javascript" id="echarts-template-wonderland-js" src="echarts/echarts.wonderland.js"></script> -->
 	<!-- Including Dark Theme -->
 	<script type="text/javascript" id="dark-ui-js" src="dark-fomantic-ui.js"></script>
 	<!-- Including UI code -->
