--- a/404.html
+++ b/404.html
@@ -198,8 +198,8 @@
 	<script type="text/javascript" id="ui-js" src="ui.js"></script>
 	<script type="text/javascript" id="ui-wrappers-js" src="ui.wrappers.js"></script>
 	<!-- Including Parser code -->
-	<script type="text/javascript" id="parser-js" src="parser.js"></script>
+	<!-- <script type="text/javascript" id="parser-js" src="parser.js"></script> -->
 	<!-- Including App code -->
-	<script type="text/javascript" id="app-js" src="app.js"></script>
+	<!-- <script type="text/javascript" id="app-js" src="app.js"></script> -->
 </body>
 </html>
