:lipstick: Changed stop button color to red

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 									<i class="play icon"></i>
 									Start scan
 								</button>
-								<button id="stop-scan" class="ui black labeled icon disabled button">
+								<button id="stop-scan" class="ui red labeled icon disabled button">
 									<i class="stop icon"></i>
 									Stop scan
 								</button>
