:lipstick: Improved UI

--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
 	<div class="ui top fixed menu transition hidden">
 		<div class="ui fluid container">
 			<div class="header link item">
-				<a href="/"><i class="glasses icon"></i>Nmap Web UI</a>
-				<a href="#!" onclick="$('.ui.sidebar').sidebar('toggle');"><i class="menu icon"></i>Menu</a>
+				<a href="/"><i class="binoculars icon"></i>Nmap Web UI</a>
+				<!-- <a href="#!" onclick="$('.ui.sidebar').sidebar('toggle');"><i class="bars icon"></i>Menu</a> -->
+			</div>
+			<div class="link item>
+				<a href="#!" onclick="$('.ui.sidebar').sidebar('toggle');"><i class="bars icon"></i>Menu</a>
 			</div>
 			<div class="right menu">
 				<div class="ui item animated labeled icon button" id="dark-theme">
@@ -54,7 +57,7 @@
 	<div class="ui left inverted sidebar vertical menu">
 		<div class="header link item">
 			<a href="/">
-				<i class="glasses icon" style="float: left; margin: 0 0.35714286em 0 0;"></i>
+				<i class="binoculars icon" style="float: left; margin: 0 0.35714286em 0 0;"></i>
 				Nmap Web UI
 			</a>
 		</div>
@@ -73,8 +76,8 @@
 		<div class="item">
 			<div class="ui inverted accordion">
 				<div class="title">
-					<i class="cog icon" style="float: left;"></i>
-					Settings
+					<i class="language icon" style="float: left;"></i>
+					Languages
 					<i class="dropdown icon" style="float: right;"></i>
 				</div>
 				<div class="content">
@@ -102,7 +105,7 @@
 				<div class="ui large secondary inverted menu">
 					<a class="toc item"><i class="sidebar icon"></i></a>
 					<div class="header link item large screen only">
-						<a href="/"><i class="glasses icon"></i>Nmap Web UI</a>
+						<a href="/"><i class="binoculars icon"></i>Nmap Web UI</a>
 					</div>
 					<div class="link item large screen only">
 						<a href="#!" onclick="$('.ui.sidebar').sidebar('toggle');"><i class="bars icon"></i>Menu</a>
@@ -133,13 +136,13 @@
 						<a href="#!" class="item"><i class="question circle icon"></i>Help</a>
 						<a class="item"><i class="redo icon"></i>Refresh</a>
 						<div class="ui inverted dropdown item">
-							<i class="cog icon"></i> Settings <i class="dropdown icon"></i>
+							<i class="language icon"></i> Lang <i class="dropdown icon"></i>
 							<div class="menu">
-								<a class="item"><i class="us flag"></i>English</a>
-								<a class="item"><i class="fr flag"></i>French</a>
-								<a class="item"><i class="ru flag"></i>Russian</a>
-								<a class="item"><i class="es flag"></i>Spanish</a>
-								<a class="item"><i class="ch flag"></i>Swiss French</a>
+								<a class="left aligned item"><i class="us flag"></i>English</a>
+								<a class="left aligned item"><i class="fr flag"></i>French</a>
+								<a class="left aligned item"><i class="ru flag"></i>Russian</a>
+								<a class="left aligned item"><i class="es flag"></i>Spanish</a>
+								<a class="left aligned item"><i class="ch flag"></i>Swiss French</a>
 							</div>
 						</div>
 					</div>
@@ -152,7 +155,7 @@
 			<div id="variable-container" class="ui container">
 				<div class="ui basic segment">
 					<h2 class="ui header">
-						<i class="glasses icon"></i>
+						<i class="binoculars icon"></i>
 						<div class="content">Scan</div>
 					</h2>
 				</div>
